--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
-
-    <button type="button" data-start>Start</button>
-    <button type="button" data-stop>Stop</button>
-
+<div class="wrapper-btn">
+    <button class="switcher-btn" type="button" data-start>Start</button>
+    <button class="switcher-btn" type="button" data-stop>Stop</button>
+</div>
     <script src="js/01-color-switcher.js" type="module"></script>
   </body>
 </html>
